# slida

./: .gitignore  README.md  pyproject.toml
src/pyside/: animation.py  dirscanner.py  pixmaplist.py  pixmapswidget.py  pixmapwidget.py  qimage.py  qimages.py  slideshow.py  toast.py  utils.py
src/slida/: AnimPixmapsView.py  AnimPixmapsWidget.py  DirScanner.py  ImageFile.py  ImageFileCombo.py  ImageFileList.py  PixmapList.py  ScaledImage.py  SlidaImage.py  SlidaImages.py  SlideshowView.py  Toast.py  UserConfig.py  __init__.py  animpixmapsview.py  animpixmapswidget.py  application.py  debug.py  dirscanner.py  pixmaplist.py  qimage.py  qimages.py  slideshowview.py  transitions.py  utils.py
src/slida/files/: dir_scanner.py  manager.py
src/slida/qt/: application_view.py  test_effect.py
src/slida/transitions/: __init__.py  base.py  blur_effect.py  opacity_effect.py  pair.py  slide.py  sub_image.py  various.py
src/slideshow/: animpixmapsview.py  animpixmapswidget.py  application.py  dirscanner.py  pixmaplist.py  qimages.py  slideshowview.py  toast.py  utils.py
