[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {name = "Robert Huselius", email = "robert@huseli.us"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "klaatu-python",
    "numpy",
    "platformdirs",
    "PySide6",
    "pyyaml",
]
description = ""
version = "0.8.0"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
name = "slida"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "flake8",
    "ipdb",
    "ipython",
    "isort",
]

[project.scripts]
slida = "slida.application:main"

[project.urls]
Homepage = "https://github.com/Eboreg/slida"
Issues = "https://github.com/Eboreg/slida/issues"
Source = "https://github.com/Eboreg/slida"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [".venv", "node_modules", "build"]

[tool.mypy]
check_untyped_defs = true
files = "."
follow_imports = "skip"
ignore_missing_imports = true
show_error_codes = true

[tool.pyright]
exclude = ["**/__pycache__", "build", "**/.*", ".venv"]
ignore = [".venv"]
typeCheckingMode = "basic"
